# xmonad-config

./: .gitignore  cabal.project  flake.nix  home-manager.nix  xmonad-ash.cabal
app/: Main.hs
src/: Hooks.hs  Lib.hs  Overlays.hs
src/Hooks/: Layouts.hs
src/Lib/: Actions.hs  Conversion.hs
src/Lib/Actions/: Pipes.hs  Terminal.hs
src/Overlays/: Base.hs  Keymap.hs  Scratch.hs
